[tool.poetry]
name = "stravatonotion"
version = "0.1.0"
description = ""
authors = ["thibaultspriet <thibaultspriet@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
boto3 = "^1.29.3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
